--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -17,12 +17,15 @@
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.13",
+    "babel-preset-es2015": "^6.24.1",
     "colyseus.js": "^0.14.13",
     "customize-cra": "^1.0.0",
     "emoji-mart": "^3.0.1",
     "ethers": "^5.5.4",
+    "fontfaceobserver": "^2.1.0",
     "peerjs": "^1.3.2",
     "phaser": "^3.55.2",
+    "phaser-navmesh": "2.0.4",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
