--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -17,10 +17,13 @@
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.13",
+    "axios": "^0.20.0",
     "babel-preset-es2015": "^6.24.1",
+    "bnc-notify": "^1.5.0",
     "colyseus.js": "^0.14.13",
     "customize-cra": "^1.0.0",
     "emoji-mart": "^3.0.1",
+    "eth-hooks": "^1.1.2",
     "ethers": "^5.5.4",
     "fontfaceobserver": "^2.1.0",
     "peerjs": "^1.3.2",
@@ -30,6 +33,7 @@
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-responsive-spritesheet": "^2.3.9",
     "react-scripts": "4.0.3",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
@@ -50,7 +54,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off",
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": {
     "production": [
