--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -71,5 +71,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tslib": "^2.3.1"
   }
 }
